@@ -1,6 +1,10 @@
 # ChangeLog for gentoo/src/catalyst 
 # Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.158 2005/01/28 19:23:43 wolf31o2 Exp $
+# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.159 2005/01/28 19:36:49 wolf31o2 Exp $
+
+  28 Jan 2005; Chris Gianelloni <wolf31o2@gentoo.org>
+  targets/grp/grp-preclean-chroot.sh, targets/grp/grp.sh:
+  Re-enabled preclean in grp and added gconfd-2 killing.
 
   28 Jan 2005; Chris Gianelloni <wolf31o2@gentoo.org>
   livecd/runscript/x86-archscript.sh:
